<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bgProfile"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tvDay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_day"
                android:textAppearance="@style/TextAppearance.Zero.Subtitle4"
                android:textColor="@color/white"
                android:textSize="16sp" />


            <TextView
                android:id="@+id/tvUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_admin"
                android:textAppearance="@style/TextAppearance.Zero.Subtitle4"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:contentDescription="@string/title_null"
            android:src="@drawable/img_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_10"
        android:layout_marginTop="-45dp"
        android:weightSum="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bgProfile">


        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:cardCornerRadius="15dp"
            app:cardElevation="2dp"
            app:cardUseCompatPadding="true"
            app:contentPadding="20dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_detected_today"
                        android:textColor="@color/colorAccent"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.wang.avi.AVLoadingIndicatorView
                        android:id="@+id/avToday"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        app:indicatorColor="@color/colorPrimary"
                        app:indicatorName="ballScaleMultiple" />

                    <TextView
                        android:id="@+id/tvToday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_rp"
                        android:textColor="@color/colorPrimary"
                        android:textSize="22sp"
                        android:visibility="gone" />
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:cardCornerRadius="15dp"
            app:cardElevation="2dp"
            app:cardUseCompatPadding="true"
            app:contentPadding="20dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_total_detected"
                        android:textColor="@color/colorAccent"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.wang.avi.AVLoadingIndicatorView
                        android:id="@+id/avKas"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        app:indicatorColor="@color/colorPrimary"
                        app:indicatorName="ballScaleMultiple" />

                    <TextView
                        android:id="@+id/tvTotal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_rp"
                        android:textColor="@color/colorPrimary"
                        android:textSize="22sp"
                        android:visibility="gone" />
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/dp_10"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/title_history"
            android:textAppearance="@style/TextAppearance.Zero.Body1"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/llNull"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:contentDescription="@string/title_null"
                android:src="@drawable/ic_data_kosong" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/title_data_null" />

        </LinearLayout>

        <view
            android:id="@+id/line_view"
            class="im.dacer.androidcharts.LineView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvData"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/title_null"
        android:src="@drawable/ic_play"
        android:tint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

